# online-cinema

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 30ea676ef035_initial_create_all_tables.py
src/: __init__.py  config.py  database.py  general_schemas.py  main.py
src/accounts/: __init__.py  enums.py  helpers.py  models.py  routers.py  schemas.py
src/admin/: routers.py
src/cart/: __init__.py  models.py  routers.py  schemas.py
src/movies/: __init__.py  genres_routers.py  helpers.py  models.py  routers.py  schemas.py
src/orders/: __init__.py  helpers.py  models.py  routers.py  schemas.py
src/tasks/: __init__.py
tests/: conftest.py  test_accounts.py  test_admin.py  test_cart.py  test_genres.py  test_health.py  test_movies.py  test_orders.py
